[package]
name = "freebox-exporter-rs"
version = "0.0.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.84"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive"] }
flexi_logger = { version = "0.29.8", features = ["async", "specfile", "compress", "colors"]}
hmac = { version = "0.12.1", features = ["std"] }
lazy_static = "1.5.0"
log = "0.4.22"
openssl = { version = "0.10.71", features = ["vendored"] }
prometheus_exporter = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = {version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sha1 = "0.10.6"
time = "0.3.37"
tokio = { version = "1.42.0", features = ["full"]}
toml = "0.8.20"
mockall = "0.13.1"
hostname = "0.4.0"

[dev-dependencies]
wiremock = "0.6.2"
