[package]
name = "freebox-exporter-rs"
version = "0.0.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.84"
chrono = "0.4.39"
clap = { version = "4.5.32", features = ["derive"] }
flexi_logger = { version = "0.29.8", features = ["async", "specfile", "compress", "colors"]}
hmac = { version = "0.12.1", features = ["std"] }
lazy_static = "1.5.0"
log = "0.4.22"
openssl = { version = "0.10.71", features = ["vendored"] }
regex = "1.11.1"
reqwest = { version = "0.12.14", features = ["json"] }
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.134"
sha1 = "0.10.6"
time = "0.3.41"
tokio = { version = "1.44.1", features = ["full"]}
toml = "0.8.20"
mockall = "0.13.1"
hostname = "0.4.0"
prometheus_exporter = { version = "0.8.5", path = "includes/prometheus_exporter" }

[dev-dependencies]
wiremock = "0.6.2"
