[package]
name = "freebox-exporter-rs"
version = "0.0.21"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
flexi_logger = { version = "0.31.2", features = [
    "async",
    "specfile",
    "compress",
    "colors",
] }
hmac = { version = "0.12.1", features = ["std"] }
lazy_static = "1.5.0"
log = "0.4.28"
openssl = { version = "0.10.71", features = ["vendored"] }
regex = "1.11.2"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha1 = "0.10.6"
time = "0.3.43"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
mockall = "0.13.1"
hostname = "0.4.0"
prometheus_exporter = { version = "0.8.5", path = "includes/prometheus_exporter" }

[dev-dependencies]
wiremock = "0.6.5"
